# htmxhtpy-presentation

./: Procfile  README.md  pyproject.toml  tailwind.config.js
src/htmxhtpy/: components.py  database.py  main.py  timeline.py
static/: styles.css
