[tool.poetry]
name = "htmxhtpy"
version = "0.1.0"
description = ""
authors = ["Ole-Jakob Olsen <ole.jakob.olsen@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = {extras = ["standard"], version = "^0.115.0"}
htpy = "^24.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
